[package]
name = "byregot"
version = "0.2.0"
authors = ["ff14wed"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.1"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "craft_sim_benchmark"
harness = false